# Autopics

./: .gitignore  .pdm-python  README.md  next.config.js  package-lock.json  package.json  pyproject.toml
api/: logger.py  main.py  models.py  utils.py
app/: layout.tsx
components/: Header.tsx  PromptInput.tsx
